force-app/main/default/objects/Employee__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The manager of this employee.</description>
    <inlineHelpText>Select the manager for this employee.</inlineHelpText>
    <label>Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Direct Reports</relationshipLabel>
    <relationshipName>Direct_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>