force-app/main/default/objects/Employee__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Salesforce User associated with this employee.</description>
    <inlineHelpText>Select the Salesforce User record associated with this employee.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Employee Profiles</relationshipLabel>
    <relationshipName>Employee_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>